test/analysis/reject/production-undeclared-pattern-ref.ptk
# expected: E1305

rule foo = $pat;